Rendering monster dropdown and details

--- a/src/D2DropCalc.SPA/src/index.html
+++ b/src/D2DropCalc.SPA/src/index.html
@@ -12,6 +12,6 @@
         <link rel="stylesheet" href="main.scss" />
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root" class="background-grey"></div>
     </body>
 </html>
