--- a/src/D2DropCalc.SPA/src/index.html
+++ b/src/D2DropCalc.SPA/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Feliz App</title>
+        <title>D2 Drop Calc</title>
         <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://cdn.polyfill.io/v2/polyfill.js?features=es6"></script>
@@ -9,7 +9,8 @@
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css"> -->
         <link rel="stylesheet" href="styles.css" />
         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
-        <link rel="stylesheet" href="main.scss" />
+<!--        <link rel="stylesheet" href="main.scss" />-->
+<!--        <link rel="text/css" href="main.scss" />-->
     </head>
     <body>
         <div id="root" class="background-grey"></div>
